--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>Movie Tickets</title>
   </head>
   <body>
+    <div class="container">
+      <br>
+      <label for="form-control">Select a Movie:</label>
+      <select class="form-control" id="movie-dropdown">
+        <option></option>
+      </select>
+      <!-- <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="movie-dropdown" data-toggle="dropdown" aria-haspopup="true"
+        aria-expanded="true">
+          Movie
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
 
+        </ul>
+      </div> -->
+      <div class="form-group">
+        <label for="date-form">Enter a Date:</label>
+        <input type="date" class="form-control" id="date-form">
+      </div>
+      <div class="form-group">
+        <label for="time-form">Enter a Time:</label>
+        <input type="time" class="form-control" id="time-form" value="12:00">
+      </div>
+      <div class="form-group">
+        <label for="age-form">Enter your age:</label>
+        <input type="text" class="form-control" id="age-form" value="18">
+      </div>
+      <div class="row">
+        <div class="col-lg-1">
+          <button class="btn" type="button" id="price-button">Get Price</button>
+        </div>
+        <div class="col-lg-11">
+        <div class="output">
+          <h3 id="results">Test</h3
+        </div>
+      </div>
+    </div>
+    </div>
   </body>
 </html>
